--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Using Git</title>
 </head>
 <body>
+    <h1>This is again heading one</h1>
+    <h2>This file is only only practice</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At beatae provident quasi voluptatum iste repudiandae ut. Deleniti amet ea soluta asperiores rem doloremque maxime. Repellat odio illo neque explicabo amet.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quam consequuntur tempora necessitatibus! Hic saepe, consectetur accusamus sit architecto id illo impedit doloremque illum rerum! Eum odio nam amet neque.</p>
 </body>
 </html>
