--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
 </head>
 <body>
     <h1>This is again heading one</h1>
+    <table border="1">
+        <tr>
+            <th>Customer ID</th>
+            <th>Name</th>
+            <th>Email</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>John Doe</td>
+            <td>john.doe@example.com</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Jane Smith</td>
+            <td>jane.smith@example.com</td>
+        </tr>
+    </table>
     <h2>This file is only only practice</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At beatae provident quasi voluptatum iste repudiandae ut. Deleniti amet ea soluta asperiores rem doloremque maxime. Repellat odio illo neque explicabo amet.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quam consequuntur tempora necessitatibus! Hic saepe, consectetur accusamus sit architecto id illo impedit doloremque illum rerum! Eum odio nam amet neque.</p>
